[package]
name = "ac-esp"
version = "0.1.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "*"
windows = { version = "*", features = [
    "Win32_System_LibraryLoader",
    "Win32_System_SystemServices",
] }
windows-ez-overlay = { git = "https://github.com/jerryshell/windows-ez-overlay.git" }

[profile.release]
lto = true
strip = true
panic = "abort"
codegen-units = 1
